--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Flask==2.2.5
-gunicorn==21.2.0
-flask-cors
-pandas==2.2.1
+Flask==3.0.0
+Flask-Cors==4.0.0
+Flask-Login==0.6.3
 requests==2.31.0
+pandas==2.2.0
+gunicorn==21.2.0
+python-dotenv==1.0.1
+Flask-Cors==4.0.0
 
